tests/parser-test-files/bad-files/parse-if.2.error
error: Malformed if expression
  --> test:4:15
   |
 4 |  (define x (if 1))
   |                 ^ expected a form
